[package]
name = "lilah_editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imgui = "*"
glutin = "0.29.1"
imgui-winit-support = "*"
image = "0.23"
glow = "*"
imgui-glow-renderer = "*"
rfd = "*"
serde_json = "*"
pathdiff = "*"
serde = { version = "*", features = ["derive"] }
thiserror = "1.0"
glam = "*"
lazy_mut = "*"
serde_with = "3.4.0"
indexmap = "*"